--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ orbs:
   node: circleci/node@1.1.6
 jobs:
   build-and-test:
+    docker:
+      - image: selenium/standalone-chrome:latest
     executor:
       name: node/default
     steps:
@@ -10,7 +12,7 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-            - run: npx wdio wdio.conf.js
+            - run: npm run test
 workflows:
     build-and-test:
       jobs:
