--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,8 @@
-version: 2.1
-orbs:
-  node: circleci/node@1.1.6
+version: 2
 jobs:
   build-and-test:
     docker:
+      - image: circleci/node:latest
       - image: selenium/standalone-chrome:latest
     executor:
       name: node/default
