--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@wdio/spec-reporter": "^6.1.5",
     "@wdio/sync": "^6.1.7",
     "chromedriver": "^81.0.0",
-    "wdio-chromedriver-service": "^6.0.3"
+    "wdio-chromedriver-service": "^6.0.3",
+    "wdio-docker-service": "^2.3.1"
   }
 }
