--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:latest
+      - image: selenium/standalone-chrome:latest
     steps:
       - checkout
       - run: npm install
