--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.13.5",
+    "@wdio/allure-reporter": "^6.1.9",
     "@wdio/cli": "^6.1.7",
     "@wdio/local-runner": "^6.1.7",
     "@wdio/mocha-framework": "^6.1.6",
     "@wdio/spec-reporter": "^6.1.5",
     "@wdio/sync": "^6.1.7",
+    "allure-commandline": "^2.13.0",
+    "chai": "^4.2.0",
     "chromedriver": "^81.0.0",
+    "ts-node": "^8.10.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.8.3",
     "wdio-chromedriver-service": "^6.0.3"
   }
 }
