--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout
       - run: npm install
-      - run: npm run test
+      - run: npm test
       - run: allure generate allure-results -o allure-report
       - store_artifacts:
           path: allure-report
