--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chromedriver": "^81.0.0",
     "ts-node": "^8.10.1",
     "tsconfig-paths": "^3.9.0",
+    "tslint": "^6.1.2",
     "typescript": "^3.8.3",
     "wdio-chromedriver-service": "^6.0.3"
   }
